Fixed background color incorrect

--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -35,19 +35,19 @@
                 android:id="@+id/containerDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent" />
+                android:background="@color/white" />
 
             <FrameLayout
                 android:id="@+id/containerOverview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent" />
+                android:background="@color/white" />
 
             <FrameLayout
                 android:id="@+id/containerExtension"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/colorAccent" />
+                android:background="@color/white" />
 
         </LinearLayout>
     </ScrollView>
