--- a/app/src/pwb/res/values/colors.xml
+++ b/app/src/pwb/res/values/colors.xml
@@ -3,6 +3,8 @@
     <!-- drawer sub header -->
     <color name="drawerSubHeaderColor">#F4893F</color>
 
+    <color name="pwbOrange">#F4893F</color>
+
     <color name="specialPriceColor">#D0021B</color>
     <color name="primaryButtonColor">#542D87</color>
     <color name="defaultButtonColor">#F4893F</color>
