--- a/app/src/cds/res/values/styles.xml
+++ b/app/src/cds/res/values/styles.xml
@@ -32,4 +32,13 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/cdsRed</item>
     </style>
+
+    <!-- Form -->
+    <style name="Form" />
+
+    <style name="Form.EditTextLayoutTheme" parent="AppTheme">
+        <item name="colorAccent">@color/cdsRed</item>
+        <item name="colorControlNormal">@color/cdsRed</item>
+        <item name="colorControlActivated">@color/cdsRed</item>
+    </style>
 </resources>
