--- a/app/src/main/res/drawable/text_selector.xml
+++ b/app/src/main/res/drawable/text_selector.xml
@@ -3,5 +3,5 @@
     <item android:color="@color/graySelect" android:state_selected="true" />
     <item android:color="@color/graySelect" android:state_focused="true" />
     <item android:color="@color/graySelect" android:state_pressed="true" />
-    <item android:color="@color/powerBuyOrange" /> <!-- default case -->
+    <item android:color="@color/pwbOrange" /> <!-- default case -->
 </selector>
