--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -60,6 +60,7 @@
                                 android:nextFocusDown="@+id/edit_text_password"
                                 android:textColor="@color/headerTextColor"
                                 android:textColorHint="#a1a1a1"
+                                android:textCursorDrawable="@drawable/custom_cursor"
                                 android:textSize="19sp" />
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
@@ -96,6 +97,7 @@
                                 android:inputType="textPassword"
                                 android:maxLines="1"
                                 android:textColor="@color/headerTextColor"
+                                android:textCursorDrawable="@drawable/custom_cursor"
                                 android:textSize="19sp" />
                         </android.support.design.widget.TextInputLayout>
                     </LinearLayout>
