--- a/app/src/main/res/layout/fragment_payment_check_out.xml
+++ b/app/src/main/res/layout/fragment_payment_check_out.xml
@@ -46,7 +46,7 @@
             android:maxLength="10"
             android:maxLines="1"
             android:padding="8dp"
-            android:textCursorDrawable="@drawable/cursor_orange"
+            android:textCursorDrawable="@drawable/custom_cursor"
             android:textSize="18sp"
             android:windowSoftInputMode="adjustResize" />
 
