--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -40,7 +40,7 @@
         android:imeOptions="actionSearch"
         android:inputType="textFilter"
         android:maxLines="1"
-        android:textCursorDrawable="@drawable/cursor_orange"
+        android:textCursorDrawable="@drawable/custom_cursor"
         android:textAllCaps="true"
         android:textColor="@color/headerTextColor"
         android:textColorHint="@color/hintColor"
