--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -588,7 +588,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@color/colorPrimary">
+            app:cardBackgroundColor="@color/primaryButtonColor">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
                 style="@style/RaisedButton"
