--- a/app/src/cds/res/drawable/ic_specification.xml
+++ b/app/src/cds/res/drawable/ic_specification.xml
@@ -4,24 +4,24 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12,3l8,4.4444l0,8.8889l-8,4.4444l-8,-4.4444l0,-8.8889z"
+      android:pathData="M4,4h16v16h-16z"
       android:strokeWidth="0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#282828"
+      android:strokeColor="#A6192E"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M4,7.4444l8,4.4444l8,-4.4444"
+      android:pathData="M11.2,8L16,8M11.2,12L16,12M11.2,16L16,16"
       android:strokeWidth="0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#282828"
+      android:strokeColor="#A6192E"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M12,11.8889L12,20.7778"
+      android:pathData="M8.5,8L8,8M8.5,12L8,12M8.5,16L8,16"
       android:strokeWidth="0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#282828"
+      android:strokeColor="#A6192E"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
 </vector>
