--- a/app/src/pwb/res/drawable/ic_specification.xml
+++ b/app/src/pwb/res/drawable/ic_specification.xml
@@ -7,21 +7,21 @@
       android:pathData="M4,4h16v16h-16z"
       android:strokeWidth="0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#282828"
+      android:strokeColor="#542D87"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M11.2,8L16,8M11.2,12L16,12M11.2,16L16,16"
       android:strokeWidth="0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#282828"
+      android:strokeColor="#542D87"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M8.5,8L8,8M8.5,12L8,12M8.5,16L8,16"
       android:strokeWidth="0.5"
       android:fillColor="#00000000"
-      android:strokeColor="#282828"
+      android:strokeColor="#542D87"
       android:fillType="evenOdd"
       android:strokeLineCap="round"/>
 </vector>
