--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -38,10 +38,9 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:overScrollMode="never"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:overScrollMode="never"
         app:cardBackgroundColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@id/guideline40"
         app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +59,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Fuji Instax รุ่น Mini 90 สีดำ" />
 
     <LinearLayout
@@ -86,53 +86,53 @@
             tools:text="Product Code : " />
 
         <!--<cenergy.central.com.pwb_store.view.PowerBuyTextView-->
-            <!--android:id="@+id/txt_stock"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="40dp"-->
-            <!--android:layout_marginLeft="40dp"-->
-            <!--android:maxLines="1"-->
-            <!--android:textColor="@color/inStockColor"-->
-            <!--android:textSize="18sp"-->
-            <!--app:typeFaceAsset="RobotoLight.ttf"-->
-            <!--tools:text="In Stock" />-->
+        <!--android:id="@+id/txt_stock"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="40dp"-->
+        <!--android:layout_marginLeft="40dp"-->
+        <!--android:maxLines="1"-->
+        <!--android:textColor="@color/inStockColor"-->
+        <!--android:textSize="18sp"-->
+        <!--app:typeFaceAsset="RobotoLight.ttf"-->
+        <!--tools:text="In Stock" />-->
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/productTypeLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/guideline40"
-        app:layout_constraintTop_toBottomOf="@+id/productIdLayout">
+    <!--<LinearLayout-->
+    <!--android:id="@+id/productTypeLayout"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginStart="8dp"-->
+    <!--android:layout_marginTop="8dp"-->
+    <!--android:layout_marginEnd="16dp"-->
+    <!--android:orientation="horizontal"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintStart_toEndOf="@id/guideline40"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/productIdLayout">-->
 
-        <ImageView
-            android:id="@+id/img_pro_first"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:contentDescription="@string/product_detail"
-            android:paddingTop="5dp" />
+    <!--<ImageView-->
+    <!--android:id="@+id/img_pro_first"-->
+    <!--android:layout_width="60dp"-->
+    <!--android:layout_height="30dp"-->
+    <!--android:contentDescription="@string/product_detail"-->
+    <!--android:paddingTop="5dp" />-->
 
-        <ImageView
-            android:id="@+id/img_pro_second"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:contentDescription="@string/product_detail"
-            android:paddingTop="5dp" />
+    <!--<ImageView-->
+    <!--android:id="@+id/img_pro_second"-->
+    <!--android:layout_width="60dp"-->
+    <!--android:layout_height="30dp"-->
+    <!--android:contentDescription="@string/product_detail"-->
+    <!--android:paddingTop="5dp" />-->
 
-        <ImageView
-            android:id="@+id/img_pro_third"
-            android:layout_width="60dp"
-            android:layout_height="30dp"
-            android:contentDescription="@string/product_detail"
-            android:paddingTop="5dp" />
+    <!--<ImageView-->
+    <!--android:id="@+id/img_pro_third"-->
+    <!--android:layout_width="60dp"-->
+    <!--android:layout_height="30dp"-->
+    <!--android:contentDescription="@string/product_detail"-->
+    <!--android:paddingTop="5dp" />-->
 
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/productSpacialPriceLayout"
@@ -144,13 +144,16 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40"
-        app:layout_constraintTop_toBottomOf="@+id/productTypeLayout">
+        app:layout_constraintTop_toBottomOf="@+id/productIdLayout">
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/txt_name_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:paddingStart="0dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="5dp"
+            android:paddingBottom="5dp"
             android:textColor="@color/specialPriceColor"
             android:textSize="20sp"
             app:typeFaceAsset="RobotoLight.ttf"
@@ -182,7 +185,10 @@
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="5dp"
+            android:paddingStart="0dp"
+            android:paddingTop="5dp"
+            android:paddingEnd="5dp"
+            android:paddingBottom="5dp"
             android:text="@string/regular_price"
             android:textColor="@color/nameProductColor"
             android:textSize="18sp"
@@ -223,18 +229,53 @@
         app:layout_constraintStart_toEndOf="@id/guideline40"
         app:layout_constraintTop_toBottomOf="@+id/productPriceLayout" />
 
-    <LinearLayout
+    <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
+        android:id="@+id/inputProductColor"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:gravity="bottom"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@+id/rvProductImage"
+        android:layout_weight="1"
+        android:completionThreshold="1"
+        app:act_header="สี:"
+        android:visibility="gone"
+        app:act_required="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/inputProductShape"
+        app:layout_constraintStart_toEndOf="@id/guideline40"
+        app:layout_constraintTop_toBottomOf="@+id/line1" />
+
+    <cenergy.central.com.pwb_store.view.PowerBuyAutoCompleteTextStroke
+        android:id="@+id/inputProductShape"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:visibility="gone"
+        android:layout_weight="1"
+        android:completionThreshold="1"
+        app:act_header="Size:"
+        app:act_required="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline40"
-        app:layout_constraintTop_toBottomOf="@+id/line1">
+        app:layout_constraintBottom_toTopOf="@id/groupActionButton"
+        app:layout_constraintTop_toBottomOf="@+id/inputProductColor" />
+
+    <LinearLayout
+        android:id="@+id/groupActionButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/guideline40"
+        app:layout_constraintTop_toBottomOf="@+id/inputProductShape">
 
         <android.support.v7.widget.CardView
             android:id="@+id/card_view_add_to_cart"
@@ -357,6 +398,7 @@
     <!-- endregion -->
 
     <View
+        android:id="@+id/view"
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:layout_marginTop="24dp"
