--- a/app/src/pwb/res/values/styles.xml
+++ b/app/src/pwb/res/values/styles.xml
@@ -12,6 +12,10 @@
         <item name="searchViewStyle">@style/SearchViewStyle</item>
     </style>
 
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/defaultButtonColor</item>
+    </style>
+
     <style name="textNameCategory">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
