Edit text sub header color

--- a/app/src/cds/res/values/styles.xml
+++ b/app/src/cds/res/values/styles.xml
@@ -25,6 +25,12 @@
         <item name="colorAccent">@color/cdsRed</item>
     </style>
 
+    <style name="textSubHeader">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/cdsBlack</item>
+    </style>
+
     <style name="textNameCategory">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
