--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -28,7 +28,7 @@
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/txt_user_profile_payment"
-            style="@style/textPaymentHeader"
+            style="@style/textSubHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -110,7 +110,7 @@
             android:orientation="vertical">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                style="@style/textPaymentHeader"
+                style="@style/textSubHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -360,7 +360,7 @@
             android:orientation="vertical">
 
             <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                style="@style/textPaymentHeader"
+                style="@style/textSubHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
