--- a/app/src/pwb/res/values/styles.xml
+++ b/app/src/pwb/res/values/styles.xml
@@ -28,6 +28,12 @@
         <item name="android:textColor">@color/defaultButtonColor</item>
     </style>
 
+    <style name="textSubHeader">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/powerBuyPurple</item>
+    </style>
+
     <!-- Form -->
     <style name="Form" />
 
