--- a/app/src/main/res/drawable/bg_toggle_out_line.xml
+++ b/app/src/main/res/drawable/bg_toggle_out_line.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="32dp" />
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/toggleFill" />
     <stroke
         android:width="1dp"
-        android:color="@color/white" />
+        android:color="@color/toggleStroke" />
 </shape>
