--- a/app/src/main/res/drawable/bg_toggle_selected.xml
+++ b/app/src/main/res/drawable/bg_toggle_selected.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/toggleSelectedFill" />
 
     <corners android:radius="32dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/colorAccent" />
+        android:color="@color/toggleSelectedStroke" />
 </shape>
