Improved custom cursor just use in main

--- a/app/src/cds/res/values/colors.xml
+++ b/app/src/cds/res/values/colors.xml
@@ -18,5 +18,7 @@
     <color name="defaultButtonStrokeColor">#A6192E</color>
     <color name="iconArrowBack">@color/colorAccent</color>
 
+    <color name="cursorColor">@color/cdsRed</color>
+
     <color name="categoryColor">#F4893F</color>
 </resources>
