--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,16 +46,16 @@
     <!-- Language toggle-->
     <color name="transparent">#00ffffff</color>
 
-    <color name="toggleSelectedStroke">@color/colorAccent</color>
-    <color name="toggleSelectedFill">@color/colorPrimary</color>
-    <color name="togglePressedFill">@color/colorAccent</color>
-    <color name="toggleFill">@color/colorAccent</color>
-    <color name="toggleStroke">@color/colorAccent</color>
-
     <color name="defaultButtonColor">#F4893F</color>
     <color name="defaultTextButtonColor">@color/white</color>
     <color name="defaultButtonStrokeColor">#F4893F</color>
     <color name="iconArrowBack">@color/white</color>
+
+    <color name="toggleSelectedStroke">@color/transparent</color>
+    <color name="toggleSelectedFill">@color/white</color>
+    <color name="togglePressedFill">@color/white80</color>
+    <color name="toggleFill">@color/colorPrimary</color>
+    <color name="toggleStroke">@color/white</color>
 
     <color name="cursorColor">@color/pwbOrange</color>
 </resources>
