--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -57,5 +57,6 @@
     <color name="toggleFill">@color/colorPrimary</color>
     <color name="toggleStroke">@color/white</color>
 
+    <color name="textDefaultColor">@color/pwbOrange</color>
     <color name="cursorColor">@color/pwbOrange</color>
 </resources>
