Create custom button has icon and change to use it by checkout button on shopping cart page

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -25,4 +25,8 @@
         <attr name="disable" format="boolean"/>
         <attr name="hide_icon" format="boolean"/>
     </declare-styleable>
+    <declare-styleable name="PowerBuyIconButton">
+        <attr name="btn_disable" format="boolean"/>
+        <attr name="icon_invisible" format="boolean"/>
+    </declare-styleable>
 </resources>
