--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -170,47 +170,17 @@
             app:layout_constraintEnd_toEndOf="@id/guideline"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <android.support.v7.widget.CardView
+        <cenergy.central.com.pwb_store.view.PowerBuyIconButton
             android:id="@+id/payment"
-            style="@style/RaisedButtonCard"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:layout_weight="0.5"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@color/hintColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/guideline">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/product_compare"
-                    android:src="@drawable/ic_check" />
-
-                <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                    android:id="@+id/title_text_view"
-                    style="@style/RaisedButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/check_out"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    app:typeFaceAsset="RobotoLight.ttf" />
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
+            app:layout_constraintStart_toEndOf="@id/guideline" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
