--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,6 +46,8 @@
     <!-- Language toggle-->
     <color name="transparent">#00ffffff</color>
 
+    <color name="primaryButtonColor">#542D87</color>
+    <color name="primaryButtonTextColor">@color/white</color>
     <color name="defaultButtonColor">#F4893F</color>
     <color name="defaultTextButtonColor">@color/white</color>
     <color name="defaultButtonStrokeColor">#F4893F</color>
