Improve PowerBuyIconButton can fix to default button

--- a/app/src/cds/res/values/colors.xml
+++ b/app/src/cds/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="specialPriceColor">#D0021B</color>
     <color name="primaryButtonColor">#A6192E</color>
     <color name="defaultButtonColor">@color/white</color>
+    <color name="defaultIconButtonColor">#A6192E</color>
     <color name="defaultTextButtonColor">#A6192E</color>
     <color name="defaultButtonStrokeColor">#A6192E</color>
     <color name="iconArrowBack">@color/colorAccent</color>
