--- a/app/src/main/res/layout/fragment_payment_check_out.xml
+++ b/app/src/main/res/layout/fragment_payment_check_out.xml
@@ -50,24 +50,14 @@
             android:textSize="18sp"
             android:windowSoftInputMode="adjustResize" />
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/ok_btn_check_out"
-            style="@style/RaisedButtonCard"
+        <cenergy.central.com.pwb_store.view.PowerBuyIconButton
+            android:id="@+id/checkoutButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@color/hintColor">
-
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                style="@style/RaisedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/ok"
-                android:textColor="@android:color/white"
-                app:typeFaceAsset="RobotoLight.ttf" />
-
-        </android.support.v7.widget.CardView>
+            app:text="@string/ok"
+            app:icon_invisible="true"
+            app:btn_disable="true"/>
 
         <cenergy.central.com.pwb_store.view.PowerBuyTextView
             android:id="@+id/skipButton"
