--- a/app/src/main/res/layout/fragment_payment_billing.xml
+++ b/app/src/main/res/layout/fragment_payment_billing.xml
@@ -581,23 +581,12 @@
                 tools:text="4,404" />
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/delivery_button_payment"
-            style="@style/RaisedButtonCard"
+        <cenergy.central.com.pwb_store.view.PowerBuyIconButton
+            android:id="@+id/paymentButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardBackgroundColor="@color/primaryButtonColor">
-
-            <cenergy.central.com.pwb_store.view.PowerBuyTextView
-                style="@style/RaisedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/choose_delivery_option"
-                android:textColor="@android:color/white"
-                android:textSize="14sp"
-                app:typeFaceAsset="RobotoLight.ttf" />
-        </android.support.v7.widget.CardView>
+            app:text="@string/choose_delivery_option"
+            app:icon_invisible="true"/>
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
