--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -122,6 +122,13 @@
                             android:text="@string/login"
                             android:textColor="@android:color/white" />
                     </android.support.v7.widget.CardView>
+
+                    <cenergy.central.com.pwb_store.view.PowerBuyIconButton
+                        android:id="@+id/loginButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:icon_invisible="true"
+                        app:text="@string/login"/>
                 </LinearLayout>
             </RelativeLayout>
         </android.support.v4.widget.NestedScrollView>
