--- a/app/src/cds/res/layout/fragment_store_detail.xml
+++ b/app/src/cds/res/layout/fragment_store_detail.xml
@@ -118,27 +118,18 @@
         app:layout_constraintTop_toBottomOf="@+id/store_open_title"
         app:typeFaceAsset="RobotoLight.ttf" />
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/select_button"
-        style="@style/RaisedButtonCard"
+    <Button
+        android:id="@+id/selectButton"
+        style="@style/Button.Primary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardBackgroundColor="@color/cdsRed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/store_open_txt">
+        app:layout_constraintTop_toBottomOf="@+id/store_open_txt"
+        android:text="@string/choose_store"
+        android:paddingEnd="32dp"
+        android:paddingStart="32dp"
+        android:textSize="14sp"/>
 
-        <cenergy.central.com.pwb_store.view.PowerBuyTextView
-            style="@style/RaisedButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingEnd="32dp"
-            android:paddingStart="32dp"
-            android:text="@string/choose_store"
-            android:textColor="@color/white"
-            android:textSize="16sp"
-            app:typeFaceAsset="RobotoLight.ttf" />
-    </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
