PWB BranchDetailFragment change to use Button from Cardview

--- a/app/src/cds/res/values/colors.xml
+++ b/app/src/cds/res/values/colors.xml
@@ -29,4 +29,9 @@
     <color name="cursorColor">@color/cdsRed</color>
 
     <color name="categoryColor">#F4893F</color>
+
+    <!-- select branch page -->
+    <color name="textHeaderBranchDetail">@color/cdsRed</color>
+    <color name="textHeaderBranchTitle">@color/white</color>
+    <color name="backgroundHeaderBranchTitle">@color/cdsRed</color>
 </resources>
