--- a/app/src/main/res/layout/fragment_store_detail.xml
+++ b/app/src/main/res/layout/fragment_store_detail.xml
@@ -26,7 +26,7 @@
         android:gravity="center"
         android:paddingBottom="16dp"
         android:paddingTop="16dp"
-        android:textColor="@color/cdsRed"
+        android:textColor="@color/textHeaderBranchTitle"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
