--- a/app/src/main/res/layout/fragment_stores.xml
+++ b/app/src/main/res/layout/fragment_stores.xml
@@ -9,8 +9,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/select_store_title"
-        android:textColor="@color/white"
-        android:background="@color/colorPrimary"
+        android:textColor="@color/textHeaderBranchTitle"
+        android:background="@color/backgroundHeaderBranchTitle"
         android:textSize="18sp"
         android:padding="16dp"
         android:textStyle="bold"
