Fix toolbar icon color

--- a/app/src/cds/res/values/styles.xml
+++ b/app/src/cds/res/values/styles.xml
@@ -13,7 +13,7 @@
 
     <style name="ToolbarBack">
         <item name="colorControlHighlight">@color/colorAccent</item>
-        <item name="navigationIcon">@drawable/ic_arrow_back</item>
+        <item name="navigationIcon">@drawable/ic_arrow_back_cds</item>
     </style>
 
     <style name="ToolbarCancel">
