--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,15 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="drawerArrowStyle">@style/DrawerHamburgerStyle</item>
+    </style>
+
+    <style name="DrawerHamburgerStyle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
+        <item name="spinBars">true</item>
+        <item name="color">@color/colorAccent</item>
     </style>
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
@@ -63,26 +68,6 @@
 
     <style name="PowerBuyTabTextStyle" parent="@android:style/TextAppearance.Widget.TabWidget">
         <item name="android:textSize">19sp</item>
-    </style>
-
-    <style name="AppBarStyle" />
-
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
-    <style name="ToolbarTheme">
-        <item name="colorControlHighlight">#DCDCDC</item>
-        <item name="navigationIcon">@drawable/ic_arrow_back</item>
-        <item name="searchViewStyle">@style/SearchViewStyle</item>
-    </style>
-
-    <style name="SearchViewStyle" parent="Widget.AppCompat.Light.SearchView">
-        <item name="closeIcon">@drawable/ic_clear</item>
-        <item name="searchIcon">@drawable/ic_search</item>
-        <item name="colorControlNormal">@android:color/black</item>
-    </style>
-
-    <style name="ToolbarColoredBackArrow" parent="AppTheme">
-        <item name="android:textColorSecondary">#DCDCDC</item>
     </style>
 
     <style name="RaisedButton">
