--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,6 +70,10 @@
         <item name="android:textSize">19sp</item>
     </style>
 
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/defaultButtonColor</item>
+    </style>
+
     <style name="RaisedButton">
         <item name="android:minWidth">@dimen/raised_button_min_width</item>
         <item name="android:minHeight">@dimen/raised_button_min_height</item>
