Fixed pressed back button in history activity

--- a/app/src/main/res/layout/fragment_payment_success.xml
+++ b/app/src/main/res/layout/fragment_payment_success.xml
@@ -791,6 +791,7 @@
                 android:id="@+id/buttonFinished"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
                 app:icon_invisible="true"
                 app:text="@string/finished"/>
 
