--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -130,6 +130,8 @@
         <item name="android:background">@drawable/button_primary</item>
         <item name="android:textColor">@color/white</item>
         <item name="elevation">4dp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
