Item list in cart page change tab color title free item

--- a/app/src/cds/res/values/colors.xml
+++ b/app/src/cds/res/values/colors.xml
@@ -34,4 +34,7 @@
     <color name="textHeaderBranchDetail">@color/cdsRed</color>
     <color name="textHeaderBranchTitle">@color/white</color>
     <color name="backgroundHeaderBranchTitle">@color/cdsRed</color>
+
+    <!-- tab color item freebie -->
+    <color name="itemFreebieTabColor">@color/cdsRed</color>
 </resources>
