--- a/app/src/main/res/layout/list_item_shopping_cart.xml
+++ b/app/src/main/res/layout/list_item_shopping_cart.xml
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
-        android:background="@color/powerBuyPurple"
+        android:background="@color/itemFreebieTabColor"
         android:ellipsize="end"
         android:maxLines="2"
         android:paddingEnd="8dp"
