--- a/app/src/main/res/layout/list_item_payment_method.xml
+++ b/app/src/main/res/layout/list_item_payment_method.xml
@@ -13,7 +13,7 @@
         android:layout_width="36dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
-        app:layout_constraintEnd_toStartOf="@id/tv_carrier_title"
+        app:layout_constraintEnd_toStartOf="@id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/option_line"
@@ -44,7 +44,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/option_line"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/tv_carrier_title"
+        app:layout_constraintStart_toEndOf="@id/tv_title"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
